--- a/New folder/package.json
+++ b/New folder/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog",
   "version": "0.1.0",
-  "proxy": "http://localhost:4000/",
+  "proxy": "https://sampleblogmernapp.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
